// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadCertification before any documents have been loaded renders page with bonding leave content when leave reason is Bonding leave 1`] = `
<Heading
  level="2"
  size="1"
>
  Upload your documentation
</Heading>
`;

exports[`UploadCertification before any documents have been loaded renders page with bonding leave content when leave reason is Bonding leave 2`] = `"You need to upload one of the following documents to confirm your child’s date of birth:"`;

exports[`UploadCertification before any documents have been loaded renders page with caregiver leave content when leave reason is caregiver leave 1`] = `
<Heading
  level="2"
  size="1"
>
  Upload your certification form
</Heading>
`;

exports[`UploadCertification before any documents have been loaded renders page with caregiver leave content when leave reason is caregiver leave 2`] = `
Array [
  "You need to upload a completed ",
  <a
    href="https://www.mass.gov/family-caring-form"
    key="1"
    rel="noopener"
    target="_blank"
  >
    Certification of Your Family Member’s Serious Health Condition
  </a>,
  " to prove that you need to take leave to care for a family member with a serious medical condition.",
]
`;

exports[`UploadCertification before any documents have been loaded renders page with medical leave content 1`] = `
<Heading
  level="2"
  size="1"
>
  Upload your certification form
</Heading>
`;

exports[`UploadCertification before any documents have been loaded renders page with medical leave content 2`] = `
Array [
  "You need to upload a completed ",
  <a
    href="https://www.mass.gov/medical-leave-form"
    key="1"
    rel="noopener"
    target="_blank"
  >
    Certification of Your Serious Health Condition
  </a>,
  " to prove that you need to take medical leave.",
]
`;
